PUSH -> Ability to configure max reddirects -> Removed the configure command to streamline the experience FeatherWings is now even simpler to set up!
