# docs/swagger/swagger.json
@@ -2377,6 +2377,17 @@
                     "type": "integer",
                     "default": 8080
                 },
+                "remote_download": {
+                    "description": "RemoteDownload defines settings specific to server remote file downloads.",
+                    "type": "object",
+                    "properties": {
+                        "max_redirects": {
+                            "description": "MaxRedirects specifies the maximum number of HTTP redirects to follow during a remote file download. Defaults to 10.",
+                            "type": "integer",
+                            "default": 10
+                        }
+                    }
+                },
                 "ssl": {
                     "description": "SSL configuration for the daemon.",
                     "type": "object",
@@ -2403,6 +2414,26 @@
                     "description": "The maximum size for files uploaded through the Panel in MiB.",
                     "type": "integer",
                     "default": 100
+                }
+            }
+        },
+        "config.Backups": {
+            "type": "object",
+            "properties": {
+                "compressionLevel": {
+                    "description": "CompressionLevel determines how much backups created by wings should be compressed.\n\n\"none\" -\u003e no compression will be applied\n\"best_speed\" -\u003e uses gzip level 1 for fast speed\n\"best_compression\" -\u003e uses gzip level 9 for minimal disk space useage\n\nDefaults to \"best_speed\" (level 1)",
+                    "type": "string",
+                    "default": "best_speed"
+                },
+                "removeBackupsOnServerDelete": {
+                    "description": "RemoveBackupsOnServerDelete deletes backups associated with a server when the server is deleted",
+                    "type": "boolean",
+                    "default": true
+                },
+                "writeLimit": {
+                    "description": "WriteLimit imposes a Disk I/O write limit on backups to the disk, this affects all\nbackup drivers as the archiver must first write the file to the disk in order to\nupload it to any external storage provider.\n\nIf the value is less than 1, the write speed is unlimited,\nif the value is greater than 0, the write speed is the value in MiB/s.\n\nDefaults to 0 (unlimited)",
+                    "type": "integer",
+                    "default": 0
                 }
             }
         },
@@ -2438,6 +2469,28 @@
                 }
             }
         },
+        "config.HostTerminalConfiguration": {
+            "type": "object",
+            "properties": {
+                "disabledCommands": {
+                    "description": "DisabledCommands is a list of commands (full command or executable name) that cannot be executed.",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "enabled": {
+                    "description": "Enabled toggles whether the host terminal websocket is available.",
+                    "type": "boolean",
+                    "default": true
+                },
+                "shell": {
+                    "description": "Shell specifies the shell executable to launch for terminal sessions.",
+                    "type": "string",
+                    "default": "/bin/bash"
+                }
+            }
+        },
         "config.SftpConfiguration": {
             "type": "object",
             "properties": {
@@ -2455,6 +2508,187 @@
                     "description": "If set to true, no write actions will be allowed on the SFTP server.",
                     "type": "boolean",
                     "default": false
+                }
+            }
+        },
+        "config.SystemConfiguration": {
+            "type": "object",
+            "properties": {
+                "activitySendCount": {
+                    "description": "ActivitySendCount is the number of activity events to send per batch.",
+                    "type": "integer",
+                    "default": 100
+                },
+                "activitySendInterval": {
+                    "description": "ActivitySendInterval is the amount of time that should ellapse between aggregated server activity\nbeing sent to the Panel. By default this will send activity collected over the last minute. Keep\nin mind that only a fixed number of activity log entries, defined by ActivitySendCount, will be sent\nin each run.",
+                    "type": "integer",
+                    "default": 60
+                },
+                "backups": {
+                    "$ref": "#/definitions/config.Backups"
+                },
+                "checkPermissionsOnBoot": {
+                    "description": "If set to true, file permissions for a server will be checked when the process is\nbooted. This can cause boot delays if the server has a large amount of files. In most\ncases disabling this should not have any major impact unless external processes are\nfrequently modifying a servers' files.",
+                    "type": "boolean",
+                    "default": true
+                },
+                "crashActivityLogLines": {
+                    "description": "The ammount of lines the activity logs should log on server crash",
+                    "type": "integer",
+                    "default": 2
+                },
+                "crashDetection": {
+                    "$ref": "#/definitions/config.CrashDetection"
+                },
+                "diskCheckInterval": {
+                    "description": "The amount of time in seconds that can elapse before a server's disk space calculation is\nconsidered stale and a re-check should occur. DANGER: setting this value too low can seriously\nimpact system performance and cause massive I/O bottlenecks and high CPU usage for the Wings\nprocess.\n\nSet to 0 to disable disk checking entirely. This will always return 0 for the disk space used\nby a server and should only be set in extreme scenarios where performance is critical and\ndisk usage is not a concern.",
+                    "type": "integer",
+                    "default": 150
+                },
+                "enableLogRotate": {
+                    "description": "If set to false Wings will not attempt to write a log rotate configuration to the disk\nwhen it boots and one is not detected.",
+                    "type": "boolean",
+                    "default": true
+                },
+                "hostTerminal": {
+                    "description": "HostTerminal controls interactive shell access to the host over websockets.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/config.HostTerminalConfiguration"
+                        }
+                    ]
+                },
+                "openatMode": {
+                    "type": "string",
+                    "default": "auto"
+                },
+                "sftp": {
+                    "$ref": "#/definitions/config.SftpConfiguration"
+                },
+                "timezone": {
+                    "description": "The timezone for this Wings instance. This is detected by Wings automatically if possible,\nand falls back to UTC if not able to be detected. If you need to set this manually, that\ncan also be done.\n\nThis timezone value is passed into all containers created by Wings.",
+                    "type": "string"
+                },
+                "transfers": {
+                    "$ref": "#/definitions/config.Transfers"
+                },
+                "updates": {
+                    "description": "Updates controls runtime update capabilities.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/config.UpdateConfiguration"
+                        }
+                    ]
+                },
+                "user": {
+                    "description": "Definitions for the user that gets created to ensure that we can quickly access\nthis information without constantly having to do a system lookup.",
+                    "type": "object",
+                    "properties": {
+                        "gid": {
+                            "type": "integer"
+                        },
+                        "mount_passwd": {
+                            "description": "Passwd controls weather a passwd file is mounted in the container\nat /etc/passwd to resolve missing user issues",
+                            "type": "boolean",
+                            "default": true
+                        },
+                        "passwd_file": {
+                            "type": "string",
+                            "default": "/etc/featherpanel/passwd"
+                        },
+                        "rootless": {
+                            "description": "Rootless controls settings related to rootless container daemons.",
+                            "type": "object",
+                            "properties": {
+                                "containerGID": {
+                                    "description": "ContainerGID controls the GID of the user inside the container.\nThis should likely be set to 0 so the container runs as the user\nrunning Wings.",
+                                    "type": "integer",
+                                    "default": 0
+                                },
+                                "containerUID": {
+                                    "description": "ContainerUID controls the UID of the user inside the container.\nThis should likely be set to 0 so the container runs as the user\nrunning Wings.",
+                                    "type": "integer",
+                                    "default": 0
+                                },
+                                "enabled": {
+                                    "description": "Enabled controls whether rootless containers are enabled.",
+                                    "type": "boolean",
+                                    "default": false
+                                }
+                            }
+                        },
+                        "uid": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "username": {
+                    "description": "The user that should own all of the server files, and be used for containers.",
+                    "type": "string",
+                    "default": "featherpanel"
+                },
+                "websocketLogCount": {
+                    "description": "The number of lines to send when a server connects to the websocket.",
+                    "type": "integer",
+                    "default": 150
+                }
+            }
+        },
+        "config.Transfers": {
+            "type": "object",
+            "properties": {
+                "downloadLimit": {
+                    "description": "DownloadLimit imposes a Network I/O read limit when downloading a transfer archive.\n\nIf the value is less than 1, the write speed is unlimited,\nif the value is greater than 0, the write speed is the value in MiB/s.\n\nDefaults to 0 (unlimited)",
+                    "type": "integer",
+                    "default": 0
+                }
+            }
+        },
+        "config.UpdateConfiguration": {
+            "type": "object",
+            "properties": {
+                "allowAPI": {
+                    "description": "AllowAPI controls whether the HTTP API may invoke self-updates.",
+                    "type": "boolean",
+                    "default": true
+                },
+                "defaultSHA256": {
+                    "description": "DefaultSHA256 optionally provides a checksum for DefaultURL.",
+                    "type": "string"
+                },
+                "defaultURL": {
+                    "description": "DefaultURL, when set, is used as the fallback direct download source for URL based updates.",
+                    "type": "string"
+                },
+                "disableChecksum": {
+                    "description": "DisableChecksum skips checksum verification for all self-updates.",
+                    "type": "boolean",
+                    "default": true
+                },
+                "enableURL": {
+                    "description": "EnableURL controls whether URL driven self-updates are permitted.",
+                    "type": "boolean",
+                    "default": true
+                },
+                "gitHubBinaryTemplate": {
+                    "description": "GitHubBinaryTemplate defines the asset name template (supports {arch} placeholder).",
+                    "type": "string",
+                    "default": "wings_linux_{arch}"
+                },
+                "repoName": {
+                    "description": "RepoName defines the default GitHub repository name used for self-updates.",
+                    "type": "string",
+                    "default": "featherwings"
+                },
+                "repoOwner": {
+                    "description": "RepoOwner defines the default GitHub repository owner used for self-updates.",
+                    "type": "string",
+                    "default": "mythicalltd"
+                },
+                "restartCommand": {
+                    "description": "RestartCommand, when set, is executed after a successful self-update.",
+                    "type": "string",
+                    "default": "systemctl restart featherwings"
                 }
             }
         },
