# router/downloader/downloader.go
@@ -17,6 +17,7 @@ import (
 	"github.com/goccy/go-json"
 	"github.com/google/uuid"
 
+	"github.com/mythicalltd/featherwings/config"
 	"github.com/mythicalltd/featherwings/server"
 )
 
@@ -101,7 +102,7 @@ const (
 	ErrDownloadFailed     = errors.Sentinel("downloader: download request failed")
 )
 
-const maxRedirects = 10
+const defaultMaxRedirects = 10
 
 type Counter struct {
 	total   int
@@ -195,7 +196,8 @@ func (dl *Download) Execute() error {
 	var res *http.Response
 	var finalURL *url.URL
 
-	for redirects := 0; redirects <= maxRedirects; redirects++ {
+	maxRedirects := maxRedirectAttempts()
+	for redirects := 0; redirects < maxRedirects; redirects++ {
 		urlStr := currentURL.String()
 		if _, seen := visited[urlStr]; seen {
 			return errors.New("downloader: detected redirect loop")
@@ -389,4 +391,14 @@ func mustParseCIDR(ip string) *net.IPNet {
 		panic(fmt.Errorf("downloader: failed to parse CIDR: %s", err))
 	}
 	return block
+}
+
+func maxRedirectAttempts() int {
+	cfg := config.Get()
+	if cfg != nil {
+		if v := cfg.Api.RemoteDownload.MaxRedirects; v > 0 {
+			return v
+		}
+	}
+	return defaultMaxRedirects
 }
